[package]
name = "sortie"
version = "0.1.1"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
openssl = { version = "0.10", features = ["vendored"], optional = true }
openssl-probe = { version = "0.1", optional = true }
taplo = "0.13.0"
taplo-common = "0.5.0"
toml = "0.8.12"

[features]
openssl-vendored = ["dep:openssl", "dep:openssl-probe"]
